fix: map fully closed on mobile

--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -175,10 +175,6 @@ footer .container {
             height: 70vh;
         }
 
-        &.close .map .leaflet-container {
-            height: 93px;
-        }
-
     }
    
 }
